hard-gists/1773870/run.log
=== Docker Run Log for 1773870 ===
Started at: Mi 29. Okt 12:27:29 CET 2025

[2025-10-29 12:27:30] START: Running container for 1773870
[2025-10-29 12:27:30] SUCCESS: Container eec3889ae4fb80dda28104da22637596a890534811fdbde1c1e3f4d9174e9ff7 started for 1773870
=== Container logs for 1773870 ===
  File "/snippet.py", line 40
    print "You must supply a filename to generate"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1773870 ===
[2025-10-29 12:27:32] INFO: Container eec3889ae4fb80dda28104da22637596a890534811fdbde1c1e3f4d9174e9ff7 has stopped
